<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/todayFragment">
    
    <fragment
        android:id="@+id/inboxFragment"
        android:name="com.vega.ui.fragments.InboxFragment"
        android:label="@string/title_inbox" />
    
    <fragment
        android:id="@+id/todayFragment"
        android:name="com.vega.ui.fragments.TodayFragment"
        android:label="@string/title_today" />
    
    <fragment
        android:id="@+id/upcomingFragment"
        android:name="com.vega.ui.fragments.UpcomingFragment"
        android:label="@string/title_upcoming" />
    
    <fragment
        android:id="@+id/doneFragment"
        android:name="com.vega.ui.fragments.DoneFragment"
        android:label="@string/title_done" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.vega.ui.fragments.SearchFragment"
        android:label="Search" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.vega.ui.fragments.SettingsFragment"
        android:label="@string/title_settings" />
    
</navigation>
